--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "daisyui": "^2.17.0",
+    "firebase": "^9.8.4",
     "iconv-lite": "^0.6.3",
     "next": "12.1.6",
     "react": "^18.2.0",
