--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,21 @@
-version: '3.6'
+version: '3.8'
 services:
-  postgres:
+  db:
     image: postgres:12-alpine
     restart: always
+    container_name: dev-db
+    ports:
+      - '5432:5432'
     volumes:
-    - plural-cv-db:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: flimsypassword
+      POSTGRES_USER: prisma
+      POSTGRES_PASSWORD: prisma
+      POSTGRES_DB: prisma
+    command: -p 5432
+    expose:
+      - 5432
 volumes:
-  plural-cv-db:
+  data:
 
+# The purpose of this file is just to create a local postgres db as a dev environment
