--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "@react-pdf/renderer": "^2.2.0",
     "daisyui": "^2.17.0",
-    "firebase": "^9.8.4",
     "iconv-lite": "^0.6.3",
     "next": "12.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-pdf": "^5.7.2"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
