--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
     "@react-pdf/renderer": "^2.2.0",
     "daisyui": "^2.17.0",
     "iconv-lite": "^0.6.3",
     "next": "12.1.6",
+    "next-auth": "^4.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.7.2"
